--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
-*
-{
+* {
     box-sizing: border-box;
 }
 
@@ -10,10 +9,9 @@ body {
 
 /*INTRO TRANSITION*/
 
-#intro
-{
+#intro {
     transition: opacity 5s;
-    position: absolute;
+    position: fixed;
     background-color: black;
     color: white;
     width: 100%;
@@ -22,8 +20,7 @@ body {
     text-align: center;
 }
 
-#intro>img
-{
+#intro>img {
     height: 25%;
     transition: opacity 2.5s;
     margin-top: 25%;
@@ -33,13 +30,12 @@ body {
 
 /*BODY*/
 
-#header-wrapper
-{
+#header-wrapper {
     height: 64px;
     width: 100%;
     display: flex;
     position: fixed;
-    background-color: rgba(0,0,0,.45);
+    background-color: rgba(0, 0, 0, .45);
     backdrop-filter: blur(46px);
     top: 0;
     left: 0;
@@ -51,13 +47,16 @@ body {
     transform: translateY(0px);
 }
 
-#bg
-{
+#bg {
     background-image: url("./../assets/images/bg.jpg");
     background-repeat: no-repeat;
     background-position: center;
+    background-size: cover;
     height: 100vh;
     width: 100%;
+    text-align: center;
+    overflow: hidden;
+    z-index: -1;
 }
 
 .global-header {
@@ -68,13 +67,37 @@ body {
     transition: ease .3s;
 }
 
-.middle-panel>img
-{
+.middle-panel>img {
     height: 50px;
     width: 50px;
 }
 
-.left-panel
-{
+.left-panel {
     padding-left: 15px;
+}
+
+#bg>h1 {
+    margin-top: 25%;
+    transform: translateY(-50%);
+    color: white;
+    font-style: italic;
+    font-weight: 700;
+}
+
+.text-presentation
+{
+    width: 70%;
+    margin: 35px auto;
+}
+
+footer
+{
+    height: 220px;
+    width: 100%;
+    background-color: rgb(31, 29, 29);
+}
+
+.ressources
+{
+    border-bottom: 1px solid #303030;
 }
