--- a/css/style.css
+++ b/css/style.css
@@ -94,10 +94,23 @@ footer
 {
     height: 220px;
     width: 100%;
-    background-color: rgb(31, 29, 29);
+    background-color: rgb(0, 0, 0);
+    color: white;
 }
 
 .ressources
 {
     border-bottom: 1px solid #303030;
+    text-align: center;
+}
+
+.ressources>ul
+{
+    margin: 0 auto;
+}
+
+.ressources>ul li
+{
+    list-style: none;
+    width: 200px;
 }
