--- a/css/style.css
+++ b/css/style.css
@@ -84,33 +84,32 @@ body {
     font-weight: 700;
 }
 
-.text-presentation
-{
+.text-presentation {
     width: 70%;
     margin: 35px auto;
 }
 
-footer
-{
+footer {
     height: 220px;
     width: 100%;
     background-color: rgb(0, 0, 0);
     color: white;
 }
 
-.ressources
-{
+.ressources {
     border-bottom: 1px solid #303030;
-    text-align: center;
 }
 
-.ressources>ul
-{
+.ressources>ul {
     margin: 0 auto;
 }
 
-.ressources>ul li
-{
+.ressources>ul li {
     list-style: none;
     width: 200px;
+}
+
+.reseaux-sociaux {
+    display: flex;
+    flex-wrap: wrap;
 }
