--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
 * {
     box-sizing: border-box;
+    margin: 0;
 }
 
 body {
-    margin: 0;
     height: 100vh;
 }
 
@@ -48,7 +48,7 @@ body {
 }
 
 #bg {
-    background-image: url("./../assets/images/bg.jpg");
+    background-image: url("./../assets/images/prototype_solo.png");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -79,14 +79,53 @@ body {
 #bg>h1 {
     margin-top: 25%;
     transform: translateY(-50%);
-    color: white;
+    color: rgb(0, 0, 0);
     font-style: italic;
     font-weight: 700;
 }
 
-.text-presentation {
-    width: 70%;
-    margin: 35px auto;
+.presentation-projet
+{
+    height: 100vh;
+    width: 100%;
+}
+
+.section-gauche, .section-droite
+{
+    width: 50%;
+    height: inherit;
+    display: inline-block;
+    vertical-align: top;
+    text-align: left;
+}
+
+.section-droite
+{
+    padding: 50px;
+}
+
+.section-droite>h2
+{
+    font-size: 2.35rem;
+    font-style: normal;
+    font-weight: bold;
+    margin-top: 35%;
+    margin-bottom: 40px;
+}
+
+.section-droite>p
+{
+    font-size: 1.35rem;
+    font-style: normal;
+    font-weight: 100;
+}
+
+.section-gauche
+{
+    background-image: url("./../assets/images/Illustration_sans_titre.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 
 footer {
