--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,8 @@
 
 body {
     height: 100vh;
-    color: white;
-    background-color: #181818;
+    color: rgb(0, 0, 0);
+    background-color: #ffffff;
 }
 
 /*INTRO TRANSITION*/
@@ -14,7 +14,7 @@ body {
 #intro {
     transition: opacity 5s;
     position: fixed;
-    background-color: black;
+    background-color: rgb(255, 255, 255);
     color: white;
     width: 100%;
     height: 100%;
