--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,8 @@ body {
     width: 100%;
     display: flex;
     position: fixed;
-    background-color: rgba(0, 0, 0, .45);
+    /*background-color: rgba(0, 0, 0, .45);*/
+    background-color: rgba(0, 0, 0, 1);
     backdrop-filter: blur(46px);
     top: 0;
     left: 0;
@@ -74,10 +75,6 @@ body {
     width: 50px;
 }
 
-.left-panel {
-    padding-left: 15px;
-}
-
 #bg>h1 {
     margin-top: 25%;
     transform: translateY(-50%);
@@ -86,6 +83,7 @@ body {
     font-weight: 700;
 }
 
+/*  SECTION PRESENTATION DU PROJET  */
 .presentation-projet
 {
     height: 100vh;
@@ -129,6 +127,58 @@ body {
     background-size: cover;
     background-position: center;
 }
+
+/*  SECTION PRESENTATION DES MEMBRES  */
+.presentation-equipe
+{
+    width: 100%;
+    height: 100vh;
+    padding-top: 5%;
+    text-align: center;
+}
+
+.presentation-equipe>div:first-child
+{
+    margin-top: 70px;
+}
+
+.membre-wrapper
+{
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 50px;
+    width: 100%;
+    height: 70%;
+    color: rgb(0, 0, 0);
+    margin-top: 5px;
+}
+
+.membre
+{
+    width: 20%;
+    height: 100%;
+}
+
+.membre
+{
+    background-image: url("./../assets/images/prototype_solo.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    border-radius: 15px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);;
+}
+
+.membre>h2
+{
+    
+    vertical-align: text-bottom;
+}
+
+
+/*  PIED DE PAGE */
 
 footer {
     height: 220px;
