--- a/css/style.css
+++ b/css/style.css
@@ -204,3 +204,41 @@ footer {
     display: flex;
     flex-wrap: wrap;
 }
+
+.scroll-control {
+    position: fixed;
+    right: 20px;
+    top: 50%;
+    transform: translateX(-50%);
+    z-index: 999;
+}
+.scroll-control span {
+    cursor: pointer;
+    display: block;
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    margin: 10px 0;
+    background-color: #000;
+    opacity: 0.7;
+    color: white;
+    text-align: center;
+}
+.scroll-control span:hover {
+    opacity: 1;
+}
+
+.container {
+    height: 100%;
+}
+.row {
+    align-items: center;
+    text-align: center;
+    height: 100%;
+}
+
+@media all and (max-width: 1023px) {
+    .scroll-control span {
+        display: none;
+    }
+}
