--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,42 @@ body {
     transform: translateY(-50%);
 }
 
+/*  SCROLL SECTION-BY-SECTION*/
+.scroll-control {
+    position: fixed;
+    right: 20px;
+    top: 50%;
+    transform: translateX(-50%);
+    z-index: 999;
+}
+
+.scroll-control span {
+    cursor: pointer;
+    display: block;
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    margin: 10px 0;
+    background-color: #000;
+    opacity: 0.7;
+    color: white;
+    text-align: center;
+}
+
+.scroll-control span:hover {
+    opacity: 1;
+}
+
+.container {
+    height: 100%;
+}
+
+.row {
+    align-items: center;
+    text-align: center;
+    height: 100%;
+}
+
 
 /*BODY*/
 
@@ -37,8 +73,7 @@ body {
     width: 100%;
     display: flex;
     position: fixed;
-    /*background-color: rgba(0, 0, 0, .45);*/
-    background-color: rgba(0, 0, 0, 1);
+    background-color: rgba(0, 0, 0, .45);
     backdrop-filter: blur(46px);
     top: 0;
     left: 0;
@@ -54,6 +89,7 @@ body {
     background-image: url("./../assets/images/prototype_solo.png");
     background-repeat: no-repeat;
     background-position: center;
+    background-attachment: fixed;
     background-size: cover;
     height: 100vh;
     width: 100%;
@@ -70,7 +106,7 @@ body {
     transition: ease .3s;
 }
 
-.middle-panel>img {
+.middle-panel>a>img {
     height: 50px;
     width: 50px;
 }
@@ -83,15 +119,21 @@ body {
     font-weight: 700;
 }
 
+#bg>video {
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+}
+
 /*  SECTION PRESENTATION DU PROJET  */
-.presentation-projet
-{
+.presentation-projet {
     height: 100vh;
     width: 100%;
 }
 
-.section-gauche, .section-droite
-{
+.section-gauche,
+.section-droite {
     width: 50%;
     height: inherit;
     display: inline-block;
@@ -99,13 +141,11 @@ body {
     text-align: left;
 }
 
-.section-droite
-{
+.section-droite {
     padding: 50px;
 }
 
-.section-droite>h2
-{
+.section-droite>h2 {
     font-size: 2.35rem;
     font-style: normal;
     font-weight: bold;
@@ -113,15 +153,13 @@ body {
     margin-bottom: 40px;
 }
 
-.section-droite>p
-{
+.section-droite>p {
     font-size: 1.35rem;
     font-style: normal;
     font-weight: 100;
 }
 
-.section-gauche
-{
+.section-gauche {
     background-image: url("./../assets/images/Illustration_sans_titre.png");
     background-repeat: no-repeat;
     background-size: cover;
@@ -129,51 +167,46 @@ body {
 }
 
 /*  SECTION PRESENTATION DES MEMBRES  */
-.presentation-equipe
-{
+.presentation-equipe {
     width: 100%;
     height: 100vh;
     padding-top: 5%;
     text-align: center;
 }
 
-.presentation-equipe>div:first-child
-{
+.presentation-equipe>div:first-child {
     margin-top: 70px;
 }
 
-.membre-wrapper
-{
+.membre-wrapper {
     display: flex;
     flex-wrap: nowrap;
     flex-direction: row;
     justify-content: space-between;
-    padding: 50px;
+    padding: 50px 100px;
     width: 100%;
     height: 70%;
     color: rgb(0, 0, 0);
     margin-top: 5px;
 }
 
-.membre
-{
+.membre {
     width: 20%;
     height: 100%;
 }
 
-.membre
-{
+.membre {
     background-image: url("./../assets/images/prototype_solo.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     border-radius: 15px;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);
+    ;
 }
 
-.membre>h2
-{
-    
+.membre>h2 {
+
     vertical-align: text-bottom;
 }
 
@@ -185,7 +218,15 @@ footer {
     width: 100%;
     background-color: rgb(0, 0, 0);
     color: white;
+    text-align: center;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-content: center;
+    justify-content: space-around;
 }
+
 
 .ressources {
     border-bottom: 1px solid #303030;
@@ -203,39 +244,21 @@ footer {
 .reseaux-sociaux {
     display: flex;
     flex-wrap: wrap;
+    align-items: stretch;
+    justify-content: center;
+    border-bottom: 1px solid #303030;
+    padding: 10px;
 }
 
-.scroll-control {
-    position: fixed;
-    right: 20px;
-    top: 50%;
-    transform: translateX(-50%);
-    z-index: 999;
-}
-.scroll-control span {
-    cursor: pointer;
-    display: block;
-    width: 16px;
-    height: 16px;
-    border-radius: 50%;
-    margin: 10px 0;
-    background-color: #000;
-    opacity: 0.7;
-    color: white;
-    text-align: center;
-}
-.scroll-control span:hover {
-    opacity: 1;
+.reseau {
+    padding: 0 20px;
 }
 
-.container {
-    height: 100%;
+#copyright {
+    color: #303030;
 }
-.row {
-    align-items: center;
-    text-align: center;
-    height: 100%;
-}
+
+
 
 @media all and (max-width: 1023px) {
     .scroll-control span {
