--- a/css/style.css
+++ b/css/style.css
@@ -86,11 +86,6 @@ body {
 }
 
 #bg {
-    background-image: url("./../assets/images/prototype_solo.png");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-attachment: fixed;
-    background-size: cover;
     height: 100vh;
     width: 100%;
     text-align: center;
@@ -119,11 +114,53 @@ body {
     font-weight: 700;
 }
 
-#bg>video {
+.home_video {
     right: 0;
     bottom: 0;
     min-width: 100%;
     min-height: 100%;
+}
+
+/*  SWIPER SECTION  */
+.swiper {
+    width: 100%;
+    height: 100vh;
+}
+
+.swiper-wrapper {
+    height: 100vh;
+    width: 100%;
+}
+
+.autoplay-progress {
+    position: absolute;
+    right: 16px;
+    bottom: 16px;
+    margin: 0 auto 0 auto;
+    z-index: 10;
+    width: 48px;
+    height: 48px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    color: var(--swiper-theme-color);
+}
+
+.autoplay-progress svg {
+    --progress: 0;
+    position: absolute;
+    left: 0;
+    top: 0px;
+    z-index: 10;
+    width: 100%;
+    height: 100%;
+    stroke-width: 4px;
+    stroke: var(--swiper-theme-color);
+    fill: none;
+    stroke-dashoffset: calc(125.6 * (1 - var(--progress)));
+    stroke-dasharray: 125.6;
+    transform: rotate(-90deg);
 }
 
 /*  SECTION PRESENTATION DU PROJET  */
@@ -272,3 +309,4 @@ footer {
         display: none;
     }
 }
+
