--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,8 @@ body {
     bottom: 0;
     min-width: 100%;
     min-height: 100%;
+    margin: 0 auto;
+    display:block
 }
 
 /*  SWIPER SECTION  */
@@ -187,7 +189,7 @@ body {
 }
 
 .section-droite {
-    padding: 50px;
+    padding: 0px 50px;
 }
 
 .section-droite>h2 {
@@ -199,7 +201,7 @@ body {
 }
 
 .section-droite>p {
-    font-size: 1.35rem;
+    font-size: unset;
     font-style: normal;
     font-weight: 100;
 }
@@ -215,7 +217,7 @@ body {
 .presentation-equipe {
     width: 100%;
     height: 100vh;
-    padding-top: 5%;
+    margin-top: 5%;
     text-align: center;
 }
 
@@ -274,7 +276,7 @@ body {
 /*  PIED DE PAGE */
 
 footer {
-    height: 220px;
+    height: max-content;
     width: 100%;
     background-color: rgb(0, 0, 0);
     color: white;
@@ -328,6 +330,41 @@ footer {
 
 
 @media all and (max-width: 1023px) {
+    .presentation-projet
+    {
+        height: max-content;
+    }
+
+    .section-droite>h2
+    {
+        margin-top: 7%;
+    }
+    .section-droite
+    {
+        width: 100%;
+    }
+
+    .section-gauche
+    {
+        display: none;
+    }
+
+    .membre-wrapper
+    {
+        display: flex;
+        flex-wrap: nowrap;
+        flex-direction: column;
+        justify-content: center;
+        padding: 10px 20px;
+        height: 100%;
+    }
+
+    .membre
+    {
+        width: 100%;
+        margin: 20px 0;
+    }
+
     .scroll-control span {
         display: none;
     }
