--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,32 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;900&display=swap');
+/*INTRO TRANSITION*/
+
+#intro {
+    transition: opacity 5s;
+    display: flex;
+    position: fixed;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(0, 0, 0);
+    color: white;
+    width: 100%;
+    height: 100%;
+    z-index: 999;
+    text-align: center;
+}
+
+#intro>img {
+    height: 25%;
+    transition: opacity 2.5s;
+}
+
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 
 * {
     box-sizing: border-box;
     margin: 0;
-    font-family: 'Verdana';
+    font-family: 'Montserrat';
 }
 
 #header-wrapper {
@@ -40,7 +63,7 @@
 .image-acceuil {
     height: 100%;
     width: 100%;
-    background-image: url("./assets/images/bg.jpg");
+    background-image: url("./../assets/images/bg.jpg");
     background-position: center;
     background-size: auto;
     background-repeat: no-repeat;
@@ -479,4 +502,49 @@ footer>div:first-child>div {
     text-align: center;
     height: 100%;
     position: relative;
+}
+
+@media all and (max-width: 1023px) {
+    .home-text h2 {
+        font-size: x-large;
+    }
+
+    .section-gauche {
+        display: none;
+    }
+
+    .section-droite {
+        width: 100%;
+        margin: 0 10px;
+    }
+
+    .right-panel {
+        display: none;
+    }
+
+    #header-wrapper {
+        padding: 0;
+    }
+
+    .projet {
+        height: 100%;
+        margin-top: 20px;
+    }
+
+    .projet-card>div {
+        margin: 10px 0;
+    }
+
+    footer>div:first-child {
+        flex-direction: column;
+    }
+
+    footer {
+        height: max-content;
+    }
+
+    footer>div:first-child>div {
+        margin: 20px 0;
+
+    }
 }
