--- a/css/style.css
+++ b/css/style.css
@@ -52,15 +52,16 @@
     text-decoration: none;
     color: white;
     margin: 0 10px;
+    font-size: larger;
+    text-transform: uppercase;
+    font-family: Roboto, Helvetica Neue, Arial;
 }
 
-.right-panel>i
-{
+.right-panel>i {
     display: none;
 }
 
-.left-panel>a>img
-{
+.left-panel>a>img {
     height: 45px;
 }
 
@@ -299,6 +300,10 @@
     flex-direction: column;
 }
 
+.membre-info span {
+    font-size: larger;
+}
+
 .equipe-wrapper>div>h1 {
     margin-bottom: 10px;
 }
@@ -517,7 +522,7 @@ footer>div:first-child>div {
 
 @media all and (max-width: 1023px) {
     .home-text h2 {
-        font-size: x-large;
+        font-size: larger;
     }
 
     .section-gauche {
@@ -529,25 +534,23 @@ footer>div:first-child>div {
         margin: 0 10px;
     }
 
-    .left-panel
-    {
+    .left-panel {
         padding-left: 20px;
     }
 
-    .left-panel>a>img
-    {
+    .left-panel>a>img {
         width: 50px;
         height: 55px;
     }
 
-    .right-panel
-    {
+    .right-panel {
         padding-right: 20px;
     }
 
     .right-panel>nav {
         display: none;
     }
+
     .right-panel>i {
         display: contents;
         font-size: -webkit-xxx-large;
