--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@
     margin: 0 10px;
     font-size: larger;
     text-transform: uppercase;
-    font-family: Roboto, Helvetica Neue, Arial;
+    font-family: "Roboto", "Helvetica Neue", Arial;
 }
 
 .right-panel>i {
@@ -379,7 +379,7 @@ footer>div:first-child>div {
     font-size: 30px;
     font-family: Montserrat;
     font-weight: 900;
-    word-wrap: "break-word";
+    word-break: break-all;
 }
 
 .a-propos>h2:first-of-type {
@@ -464,37 +464,6 @@ footer>div:first-child>div {
     width: 100%;
 }
 
-.autoplay-progress {
-    position: absolute;
-    right: 16px;
-    bottom: 16px;
-    margin: 0 auto 0 auto;
-    z-index: 10;
-    width: 48px;
-    height: 48px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-weight: bold;
-    color: var(--swiper-theme-color);
-}
-
-.autoplay-progress svg {
-    --progress: 0;
-    position: absolute;
-    left: 0;
-    top: 0px;
-    z-index: 10;
-    width: 100%;
-    height: 100%;
-    stroke-width: 4px;
-    stroke: var(--swiper-theme-color);
-    fill: none;
-    stroke-dashoffset: calc(125.6 * (1 - var(--progress)));
-    stroke-dasharray: 125.6;
-    transform: rotate(-90deg);
-}
-
 /*  SCROLL SECTION-BY-SECTION*/
 .scroll-control {
     position: fixed;
@@ -565,7 +534,7 @@ footer>div:first-child>div {
 
     .right-panel>i {
         display: contents;
-        font-size: -webkit-xxx-large;
+        font-size: xxx-large;
     }
 
     #header-wrapper {
